서비스 상세 작업중

--- a/css/comm.css
+++ b/css/comm.css
@@ -94,7 +94,7 @@
   background-color: white;
   box-sizing: border-box;
   border-radius: 0;
-  padding: 20px;
+  padding: 20px 0;
   margin-bottom: 16px;
   border-bottom: 1px solid #e6e6e6;
 }
