--- a/css/wrd_cate.css
+++ b/css/wrd_cate.css
@@ -19,3 +19,25 @@
 #con_page {
   display: block;
 }
+#con_page .wrp_play_list {
+  background-color: white;
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_play_list {
+    background-color: #f2f4f6;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_play_list {
+    margin: 0;
+    padding: 11% 4% 10% 4%;
+  }
+}
+#con_page .con_details .box_tit {
+  margin-bottom: 50px;
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_details .box_tit {
+    margin-bottom: 10%;
+  }
+}
