--- a/css/scss/service.scss
+++ b/css/scss/service.scss
@@ -24,6 +24,7 @@
 #con_page {
   display: block;
   .service_form_main {
+    box-sizing: border-box;
     .box_img {
       position: relative;
       z-index: 1;
@@ -142,7 +143,8 @@
     .con_request_form {
       @extend %bw;
       max-width: 970px;
-      @include cV(padding, 3%, 5%);
+      box-sizing: border-box;
+      @include cV(padding, 3%, 5% 0);
       .box_progress_bar {
         width: 100%;
         display: flex;
